# iSpan_python-DA-cookbooks

./: README.md
.github/workflows/: course-notebooks.yml
Classic-Edition_python_DA/numpy/: CH002_NumPy 陣列 基礎操作.ipynb
Classic-Edition_python_DA/pandas/: 1-3 Pandas DataFrame 創建.ipynb  1-5-1 Pandas DataFrame 基礎資料處理.ipynb  1-5-2 Pandas DataFrame 基礎資料處理-時間序列.ipynb  1-6-2 Pandas DataFrame 特徵工程_特徵轉換.ipynb  1-7-1 Pandas DataFrame 統計檢定-多變量_類別vs連續.ipynb  1-7-2 Pandas DataFrame 統計檢定-多變量_類別vs類別.ipynb  1-7-3 Pandas DataFrame 統計檢定-多變量_連續vs連續.ipynb
ETL_course/01-FileIO/: taipei_output.json
Master-Advance/Python_project_sample/: README.md  create_structure.py
Master-Advance/Python_project_sample/oop_course/setup_environment/my_project/: pyproject.toml
Master-Advance/acceleration/: 02-GPU-Acceleration-Overview-and-Environment-Setup.ipynb  03-CuPy-GPU-Accelerated-NumPy.ipynb  04-cuDF-GPU-Accelerated-DataFrames.ipynb  05-cuML-GPU-Accelerated-Machine-Learning.ipynb  06-cuGraph-GPU-Accelerated-Graph-Analytics.ipynb  07-Dask-CUDA-Multi-GPU-and-Large-Scale-Processing.ipynb  (+1 more)
OOP/: python-object-oriented-programming.ipynb  物件導向程式設計.ipynb
advance/: 02-underline .ipynb
advance/OOP/: module.py  (+4 more)
numpy/: CH001_NumPy 陣列 創建.ipynb
pandas/: 1-2 Pandas Series 基礎操作.ipynb  1-5 Pandas DataFrame 基礎資料處理.ipynb  1-5-2 Pandas DataFrame 基礎資料處理-時間序列.ipynb  1-6-1 Pandas DataFrame 特徵工程_資料探索.ipynb  1-6-2 Pandas DataFrame 特徵工程_特徵清洗.ipynb  1-6-3 Pandas DataFrame 特徵工程_特徵清洗.ipynb  1-6-3 Pandas DataFrame 特徵工程_特徵轉換.ipynb  1-7-3 Pandas DataFrame 統計檢定-多變量_連續vs連續.ipynb
slides/: python-adv-key-point.xmind
(+492 files in other folders)
