[project]
name = "my-project"
version = "0.1.0"
description = ""
authors = [
    {name = "SUNNY",email = "xdxd2455789@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)"
]

[tool.poetry]
packages = [{include = "my_project", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"               
   
   
   
   
   
   
   
   
   
   
   
   
   
  
